Solve module4-task2 in process

--- a/css/main.css
+++ b/css/main.css
@@ -402,6 +402,10 @@ input[type=radio]:checked + .upload-effect-label .upload-effect-preview {
   color: #000;
 }
 
+.upload-form-hashtags:invalid {
+  border-color: red;
+}
+
 /* Описание */
 .upload-form-description {
   width: 470px;
@@ -419,6 +423,10 @@ input[type=radio]:checked + .upload-effect-label .upload-effect-preview {
 
 .upload-form-description:focus {
   color: #000;
+}
+
+.upload-form-description:focus:invalid {
+  border-color: red;
 }
 
 /* Кнопка отправки */
