--- a/css/main.css
+++ b/css/main.css
@@ -874,7 +874,7 @@ input[type=radio]:checked + .upload-effect-label .upload-effect-preview {
   font-size: 20px;
   font-weight: bold;
 
-  position: absolute;
+  position: fixed;
   z-index: 20;
   top: 0;
   left: 0;
